Revise README for ao860happyshop application
Updated project description and running instructions.